--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1174,5 +1174,11 @@
   "repost": "โพสต์ใหม่",
   "video_short": "วิดีโอสั้น",
   "wallet_ready_to_use": "กระเป๋าเงินคริปโตของคุณพร้อมใช้งานแล้ว",
-  "the_remaining_balance_add": "ยอดคงเหลือที่เหลือจะถูกเพิ่มไปยังกระเป๋าเงินจัดการยอดคงเหลือ:"
+  "the_remaining_balance_add": "ยอดคงเหลือที่เหลือจะถูกเพิ่มไปยังกระเป๋าเงินจัดการยอดคงเหลือ:",
+
+  "incomplete_registration": "กระบวนการลงทะเบียนไม่สมบูรณ์",
+  "detail_review": "รีวิวรายละเอียด",
+  "your_review": "รีวิวของคุณ",
+  "view_your_video_short_at": "ดูวิดีโอสั้นของคุณที่",
+  "manage_video_short": "จัดการวิดีโอสั้น"
 }
