--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -1187,5 +1187,8 @@
   "discount_remaining": "Diskaun yang tinggal",
   "voucher_tour": "Baucar pelancongan",
   "apply_discount": "Diskaun yang digunakan",
-  "the_remaining_balance_add": "Baki yang tinggal akan dikembalikan ke baucar yang digunakan"
+  "the_remaining_balance_add": "Baki yang tinggal akan dikembalikan ke baucar yang digunakan",
+
+  "please_select_check_out": "Sila pilih tarikh daftar keluar",
+  "add_your_youtube_video": "Tambah pautan video YouTube hartanah anda (jika ada)"
 }
