--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -1205,5 +1205,8 @@
   "discount_remaining": "Natitirang diskwento",
   "voucher_tour": "Voucher ng tour",
   "apply_discount": "Inaplay na diskwento",
-  "the_remaining_balance_add": "Ang natitirang balanse ay ibabalik sa inaplay na voucher"
+  "the_remaining_balance_add": "Ang natitirang balanse ay ibabalik sa inaplay na voucher",
+
+  "please_select_check_out": "Mangyaring pumili ng petsa ng pag-check-out",
+  "add_your_youtube_video": "Idagdag ang link ng YouTube video ng iyong real estate (kung meron)"
 }
